# satori-rtm-sdk-c

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Info.plist  Makefile  Makefile.am  Migrating_to_API_v2.md  Nodes.xml  README.md  SatoriRtmSdkWrapper.podspec  SatoriSDK.podspec  Tokens.xml  class_r_t_m_wi_fi_client.html  class_r_t_m_wi_fi_client__coll__graph.md5  class_r_t_m_wi_fi_client__inherit__graph.map  class_r_t_m_wi_fi_client__inherit__graph.md5  configure.ac  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_90fd98a0ba30abf7a6068a44995d2d6b.html  dir_90fd98a0ba30abf7a6068a44995d2d6b_dep.map  dir_90fd98a0ba30abf7a6068a44995d2d6b_dep.md5  dir_a9c5a0036f769f57e3ab4b649baa6424.html  dir_a9c5a0036f769f57e3ab4b649baa6424_dep.map  dir_a9c5a0036f769f57e3ab4b649baa6424_dep.md5  dir_fb00e1804baab04f6386aced11dc5c97.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  lint.py  menudata.js  parse_credentials.cmake.txt  rtm_8h.html  (+33 more)
core/: CMakeLists.txt  library.properties.in  satori-rtm.pc.in  test_credentials.h
core/bench/: CMakeLists.txt  rtm_benchmark.cpp
core/docs/: CMakeLists.txt  Doxyfile.in  header.html  layout.xml
core/examples/: CMakeLists.txt  auth.c  connect_via_https_proxy.c  publish.c  setup.c  subscribe_to_channel.c  subscribe_to_open_channel.c  subscribe_with_age.c  subscribe_with_count.c  subscribe_with_multiple_views.c  subscribe_with_view.c
core/perf/: CMakeLists.txt  mavg.h  perf.c
core/samples/: CMakeLists.txt  auth_publish.c  auth_publish_subscribe.c  sample1.c  subscribe.c  subscribe_to_open_data_channel.c
core/src/: CMakeLists.txt  rtm.c  rtm.h  rtm_apple_ssl.c  rtm_byteorder.c  rtm_config.h.in  rtm_gnutls.c  rtm_hmac_md5.c  rtm_internal.h  rtm_json.c  rtm_openssl.c  rtm_openssl_bio.c  rtm_posix.c  rtm_ssl_cert.c  rtm_windows.c
core/src/io/: rtm_esp_arduino.cpp  rtm_posix.c  rtm_windows.c
core/src/ssl/: generate_rtm_ssl_cert.py  rtm_apple_ssl.c  rtm_gnutls.c  rtm_openssl.c  rtm_openssl_bio.h  rtm_ssl_cert.c
core/test/: CMakeLists.txt  config.h  json_test.cpp  rtm_test.cpp
easy/: rtm_easy.c  rtm_easy.h
ios-framework/SatoriSDK/SatoriSDK/: SatoriRtmConnection.h  SatoriRtmConnection.m
ios-framework/SatoriSDK/SatoriSDK.xcodeproj/: project.pbxproj
ios-framework/SatoriSDK/SatoriSDK.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios-framework/SatoriSDK/SatoriSDK.xcodeproj/xcshareddata/xcschemes/: SatoriSDK-Universal.xcscheme
ios-framework/SatoriSDK/SatoriSDKTests/: SatoriSDKTests.m
ios-wrapper/SatoriRtmSdkWrapper/SatoriRtmSdkWrapper/: SatoriPdu.h  SatoriPdu.m  SatoriRtmConnection.h  SatoriRtmConnection.m  SatoriRtmSdkWrapper.h  rtm_config.h
ios-wrapper/SatoriRtmSdkWrapper/SatoriRtmSdkWrapper.xcodeproj/: project.pbxproj
ios-wrapper/SatoriRtmSdkWrapper/SatoriRtmSdkWrapper.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios-wrapper/SatoriRtmSdkWrapper/SatoriRtmSdkWrapper.xcodeproj/xcshareddata/xcschemes/: SatoriRtmSdkWrapper-Universal.xcscheme
ios-wrapper/SatoriRtmSdkWrapper/SatoriRtmSdkWrapperTests/: SatoriRtmSdkWrapperTests.m
ios-wrapper/SatoriRtmSdkWrapper/SatoriSDK/: SatoriPdu.h  SatoriSDK.h
ios-wrapper/SatoriRtmSdkWrapper/SatoriSDKTests/: SatoriSDKTests.m
ios-wrapper/SwiftExample/: README.md
ios-wrapper/SwiftExample/FilterSubscribe.playground/: Contents.swift  timeline.xctimeline
ios-wrapper/SwiftExample/SatoriSwiftExample.xcworkspace/: contents.xcworkspacedata
ios-wrapper/SwiftExample/SatoriSwiftTutorial.xcworkspace/: contents.xcworkspacedata
ios-wrapper/SwiftExample/SimpleSubscribe.playground/: Contents.swift
ios-wrapper/scripts/: build-universal-framework.sh
python-extension/: README.md  crtm.c  setup.py
python-extension/tests/: main.py  negative_tests.py  positive_tests.py
search/: all_0.js  all_1.js  all_3.js  all_4.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js
tutorial/: CMakeLists.txt  README.md  main.c
tutorial/boost_asio/: CMakeLists.txt  main.cc
tutorial/esp-arduino/: README.md  tutorial.ino
tutorial/esp-arduino/WeatherStation/: WeatherStation.ino
tutorial/esp-arduino/publish/: publish.ino
tutorial/libuv/: CMakeLists.txt  README.md  main.c
tutorial/simple/: CMakeLists.txt  main.c
